src-tauri/crates/bridge-session/src/session/snapshots/bridge_session__session__build_viewport__tests__snapshot_bidding_viewport_mid_auction.snap
---
source: crates/bridge-session/src/session/build_viewport.rs
expression: viewport
---
seat: S
conventionName: 1NT Responses
hand:
  cards:
    - suit: S
      rank: A
    - suit: S
      rank: K
    - suit: S
      rank: Q
    - suit: S
      rank: J
    - suit: H
      rank: A
    - suit: H
      rank: K
    - suit: H
      rank: Q
    - suit: D
      rank: A
    - suit: D
      rank: K
    - suit: D
      rank: Q
    - suit: C
      rank: A
    - suit: C
      rank: K
    - suit: C
      rank: Q
handEvaluation:
  hcp: 37
  shape:
    - 4
    - 3
    - 3
    - 3
  isBalanced: true
  totalPoints: 37
  distributionPoints:
    shortness: 0
    length: 0
    total: 0
handSummary: "4-3-3-3, 37 HCP"
visibleHands:
  S:
    cards:
      - suit: S
        rank: A
      - suit: S
        rank: K
      - suit: S
        rank: Q
      - suit: S
        rank: J
      - suit: H
        rank: A
      - suit: H
        rank: K
      - suit: H
        rank: Q
      - suit: D
        rank: A
      - suit: D
        rank: K
      - suit: D
        rank: Q
      - suit: C
        rank: A
      - suit: C
        rank: K
      - suit: C
        rank: Q
auctionEntries:
  - seat: N
    call:
      type: bid
      level: 1
      strain: NT
    callDisplay: 1NT
    alertLabel: 15-17
    annotationType: announce
    meaning: "15-17 HCP, balanced"
  - seat: E
    call:
      type: pass
    callDisplay: Pass
dealer: N
vulnerability: Both
legalCalls:
  - type: bid
    level: 2
    strain: C
  - type: bid
    level: 2
    strain: H
  - type: bid
    level: 3
    strain: NT
  - type: pass
isUserTurn: true
currentBidder: S
practiceMode: decision-drill
