src-tauri/crates/bridge-session/src/session/snapshots/bridge_session__session__build_viewport__tests__snapshot_explanation_viewport.snap
---
source: crates/bridge-session/src/session/build_viewport.rs
expression: viewport
---
userSeat: S
allHands:
  N:
    cards:
      - suit: S
        rank: T
      - suit: S
        rank: "9"
      - suit: H
        rank: J
      - suit: H
        rank: T
      - suit: H
        rank: "9"
      - suit: D
        rank: J
      - suit: D
        rank: T
      - suit: D
        rank: "9"
      - suit: C
        rank: J
      - suit: C
        rank: T
      - suit: C
        rank: "9"
      - suit: C
        rank: "8"
      - suit: C
        rank: "7"
  E:
    cards:
      - suit: S
        rank: "8"
      - suit: S
        rank: "7"
      - suit: S
        rank: "6"
      - suit: S
        rank: "5"
      - suit: H
        rank: "8"
      - suit: H
        rank: "7"
      - suit: H
        rank: "6"
      - suit: H
        rank: "5"
      - suit: D
        rank: "8"
      - suit: D
        rank: "7"
      - suit: D
        rank: "6"
      - suit: D
        rank: "5"
      - suit: C
        rank: "6"
  S:
    cards:
      - suit: S
        rank: A
      - suit: S
        rank: K
      - suit: S
        rank: Q
      - suit: S
        rank: J
      - suit: H
        rank: A
      - suit: H
        rank: K
      - suit: H
        rank: Q
      - suit: D
        rank: A
      - suit: D
        rank: K
      - suit: D
        rank: Q
      - suit: C
        rank: A
      - suit: C
        rank: K
      - suit: C
        rank: Q
  W:
    cards:
      - suit: S
        rank: "4"
      - suit: S
        rank: "3"
      - suit: S
        rank: "2"
      - suit: H
        rank: "4"
      - suit: H
        rank: "3"
      - suit: H
        rank: "2"
      - suit: D
        rank: "4"
      - suit: D
        rank: "3"
      - suit: D
        rank: "2"
      - suit: C
        rank: "5"
      - suit: C
        rank: "4"
      - suit: C
        rank: "3"
      - suit: C
        rank: "2"
dealer: N
vulnerability: Both
auctionEntries:
  - seat: N
    call:
      type: bid
      level: 1
      strain: NT
    callDisplay: 1NT
    alertLabel: 15-17
    annotationType: announce
    meaning: "15-17 HCP, balanced"
  - seat: E
    call:
      type: pass
    callDisplay: Pass
  - seat: S
    call:
      type: bid
      level: 3
      strain: NT
    callDisplay: 3NT
    meaning: "10-15 HCP, no 4-card major"
  - seat: W
    call:
      type: pass
    callDisplay: Pass
  - seat: N
    call:
      type: pass
    callDisplay: Pass
  - seat: E
    call:
      type: pass
    callDisplay: Pass
contract:
  level: 3
  strain: NT
  doubled: false
  redoubled: false
  declarer: S
score: 600
declarerTricksWon: 10
defenderTricksWon: 3
bidHistory:
  - seat: N
    call:
      type: bid
      level: 1
      strain: NT
    meaning: "15-17 HCP, balanced"
    isUser: false
    alertLabel: 15-17
    annotationType: announce
  - seat: E
    call:
      type: pass
    isUser: false
  - seat: S
    call:
      type: bid
      level: 3
      strain: NT
    meaning: "10-15 HCP, no 4-card major"
    isUser: true
    isCorrect: true
  - seat: W
    call:
      type: pass
    isUser: false
  - seat: N
    call:
      type: pass
    isUser: false
  - seat: E
    call:
      type: pass
    isUser: false
tricks: []
playRecommendations:
  - trickIndex: 0
    playIndex: 2
    seat: S
    cardPlayed:
      suit: S
      rank: J
    recommendedCard:
      suit: S
      rank: A
    reason: Play the Ace to win the trick
    isOptimal: false
